fix: broken css

--- a/Chorbar/wwwroot/static/shopping.css
+++ b/Chorbar/wwwroot/static/shopping.css
@@ -39,9 +39,7 @@
       min-height: 0;
 
       &:hover,
-
-
-      Grønt &:focus {
+      &:focus {
         border: none;
         box-shadow: none;
       }
